[package]
name = "cargo-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.52", default-features = false, features = ["std"] }
clap = { version = "=3.0.0-rc.11", default-features = false, features = ["std", "derive", "color"] }
fehler = { version = "1.0.0", default-features = false }
tracing = { version = "0.1.29", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["env-filter", "fmt", "ansi"] }
