[package]
name = "cargo-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", default-features = false, features = ["std"] }
clap = { version = "=3.0.0-rc.11", default-features = false, features = ["std", "derive", "color"] }
crates-index = { version = "0.18.2", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
fehler = { version = "1.0.0", default-features = false }
flate2 = { version = "1.0.24", default-features = false, features = ["rust_backend"] }
fn-error-context = { version = "0.2.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
semver = { version = "1.0.4", default-features = false }
sha2 = { version = "0.10.1", default-features = false, features = ["std"] }
tar = { version = "0.4.38", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
tracing = { version = "0.1.29", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["env-filter", "fmt", "ansi", "tracing-log"] }
